--- a/content/00_prerequisites/00_introduction_to_python/colab.ipynb
+++ b/content/00_prerequisites/00_introduction_to_python/colab.ipynb
@@ -3403,8 +3403,14 @@
         "id": "p4ZsxD5vcbsL"
       },
       "source": [
-        "def random_walks(start, num_steps, num_trials):\n",
-        "  pass # your code goes here\n",
+        "def random_walks(start, end):\n",
+        "  pos = start\n",
+        "  x = 0\n",
+        "  while pos != end:\n",
+        "    pos += random_step()\n",
+        "    print(f\"{pos}\")\n",
+        "    x += 1\n",
+        "  return x\n",
         "\n",
         "print(random_walks(0, 5))"
       ],
